--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -12,7 +12,10 @@
       <ul>
           <li><a href="/about">About</a></li>
           <li><a href="/hello">Hello</a></li>
+          <li><a href="/menu">Menu</a></li>
           <li><a href="/products">Products</a></li>
+          <li><a href="/contact">Contact Us</a></li>
+          <li><a href="/team">Team Members</a></li>
           <li><a href="/login">Login</a></li>
       </ul>
     </nav>
@@ -30,7 +33,7 @@
         <div class="row">
             <div class="col-sm-6" style="display: inline; margin-bottom: 5px;">
                 <p class="small">
-                    &copy; Copyright 2023 [Your Name Here]
+                    &copy; Copyright 2023 [Ryan Silva, Kanoon Giri, Andrew Rehr, Damian Delong]
                 </p>
                 <p class="small">
                     Made with the <a href="https://github.com/prof-rossetti/flask-sheets-starter-2023">Flask Sheets Starter Template</a>
