--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -8,6 +8,8 @@
 
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
+
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
@@ -35,6 +37,7 @@
         }
 
     </style>
+
 
     {% block head %}
     {% endblock %}
@@ -68,13 +71,19 @@
     -->
     {% set public_nav = [
       ('/about', 'about', 'About'),
+      ('/menu', 'menu', 'Menu'),
       ('/products', 'products', 'Products'),
+      ('/team', 'team', 'Team Members'),
+      ('/contact', 'contact', 'Contact Us'),
       ('/login', 'login', 'Login'),
     ] -%}
 
     {% set protected_nav = [
       ('/about', 'about', 'About'),
+      ('/menu', 'menu', 'Menu'),
       ('/products', 'products', 'Products'),
+      ('/team', 'team', 'Team Members'),
+      ('/contact', 'contact', 'Contact Us'),
       ('/user/orders', 'user_orders', 'Orders'),
     ] -%}
 
@@ -158,7 +167,7 @@
             <div class="row">
                 <div class="col-sm-6" style="display: inline; margin-bottom: 5px;">
                     <p class="small">
-                        &copy; Copyright 2023 Your Name Here
+                        &copy; Copyright 2023 Ryan Silva, Kanoon Giri, Andrew Rehr, and Damian Delong
                     </p>
                     <p class="small">
                         Made with the <a href="https://github.com/prof-rossetti/flask-sheets-starter-2023">Flask Sheets Starter Template</a>
