--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -167,7 +167,7 @@
             <div class="row">
                 <div class="col-sm-6" style="display: inline; margin-bottom: 5px;">
                     <p class="small">
-                        &copy; Copyright 2023 Ryan Silva, Kanoon Giri, Andrew Rehr, and Damian Delong
+                        &copy; Copyright 2023 Professor Rossetti, Adapted for webpage by: Ryan Silva, Kanoon Giri, Andrew Rehr, and Damian Delong
                     </p>
                     <p class="small">
                         Made with the <a href="https://github.com/prof-rossetti/flask-sheets-starter-2023">Flask Sheets Starter Template</a>
