order page read product names

--- a/web_app/templates/products.html
+++ b/web_app/templates/products.html
@@ -16,8 +16,9 @@
                     <div class="card" style="width: 18rem; margin-bottom: 20px;">
                         <img class="card-img-top" src="{{ product.url }}" alt="an image of '{{ product.name }}'">
                         <div class="card-body">
-                            <h5 class="card-title">{{ product.name }}</h5>
-                            <p class="card-text">{{ product.description }}</p>
+                            <h5 style="color: black;" class="card-title">{{ product.name }}</h5>
+                            <p style="color: black;" class="card-text">{{ product.description }}</p>
+                            <p><color=black></p>
 
                             <!--button class="btn btn-primary">Order now!</button-->
 
