order online nav

--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -78,7 +78,7 @@
     {% set public_nav = [
       ('/about', 'about', 'About'),
       ('/menu', 'menu', 'Menu'),
-      ('/products', 'products', 'Online Orders'),
+      ('/products', 'products', 'Order Online'),
       ('/team', 'team', 'Team Members'),
       ('/contact', 'contact', 'Contact Us'),
       ('/login', 'login', 'Login'),
@@ -87,7 +87,7 @@
     {% set protected_nav = [
       ('/about', 'about', 'About'),
       ('/menu', 'menu', 'Menu'),
-      ('/products', 'products', 'Online Orders'),
+      ('/products', 'products', 'Order Online'),
       ('/team', 'team', 'Team Members'),
       ('/contact', 'contact', 'Contact Us'),
       ('/user/orders', 'user_orders', 'Orders'),
