--- a/web_app/templates/user_orders.html
+++ b/web_app/templates/user_orders.html
@@ -19,7 +19,7 @@
         <div class="table-responsive">
             <table class="table table-hover text-center">
                 <thead>
-                    <tr>
+                    <tr style="color: white">
                         <th scope="col">Order Id</th>
                         <th scope="col">User Email</th>
                         <th scope="col">Product ID</th>
@@ -29,7 +29,7 @@
                     </tr>
                 </thead>
 
-                <tbody>
+                <tbody style="color: white" >
                 {% for order in orders %}
                     <tr>
                         <td>
