--- a/web_app/templates/user_profile.html
+++ b/web_app/templates/user_profile.html
@@ -9,17 +9,17 @@
         <div class="card card-body bg-light mt-3">
 
                 <div class="mb-3">
-                    <label for="email-input" class="form-label">Email:</label>
+                    <label for="email-input" style="color: black" class="form-label">Email:</label>
                     <input disabled type="text" name="email" id="email-input" class="form-control" value="{{ user.email }}" title="Email cannot be changed" style="cursor: not-allowed;">
                 </div>
 
                 <div class="mb-3">
-                    <label for="first-name-input" class="form-label">First Name:</label>
+                    <label for="first-name-input" style="color: black"  class="form-label">First Name:</label>
                     <input disabled type="text" name="first_name" id="first-name-input" class="form-control" value="{{ user.given_name }}" >
                 </div>
 
                 <div class="mb-3">
-                    <label for="last-name-input" class="form-label">Last Name:</label>
+                    <label for="last-name-input" style="color: black" class="form-label">Last Name:</label>
                     <input disabled type="text" name="last_name" id="last-name-input" class="form-control" value="{{ user.family_name }}">
                 </div>
 
