--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -11,8 +11,8 @@
             <h2>Delivering great food for more than 18 years!</h2>
 
             <div class="btns">
-                <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
-                <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Book a Table</a>
+                <a href="/menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
+                <a href="/products" class="btn-book animated fadeInUp scrollto">Order Online</a>
             </div>
             </div>
             <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
@@ -23,46 +23,7 @@
         </div>
     </section><!-- End Hero -->
 
-    <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="why-us">
-        <div class="container" data-aos="fade-up">
-  
-          <div class="section-title">
-            <h2>Why Us</h2>
-            <p>Why Choose Our Restaurant</p>
-          </div>
-  
-          <div class="row">
-  
-            <div class="col-lg-4">
-              <div class="box" data-aos="zoom-in" data-aos-delay="100">
-                <span>01</span>
-                <h4>Lorem Ipsum</h4>
-                <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 mt-4 mt-lg-0">
-              <div class="box" data-aos="zoom-in" data-aos-delay="200">
-                <span>02</span>
-                <h4>Repellat Nihil</h4>
-                <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 mt-4 mt-lg-0">
-              <div class="box" data-aos="zoom-in" data-aos-delay="300">
-                <span>03</span>
-                <h4> Ad ad velit qui</h4>
-                <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
-              </div>
-            </div>
-  
-          </div>
-  
-        </div>
-      </section><!-- End Why Us Section -->
-      
+
 {% endblock %}
 
 <!--    <h1>Home</h1>
