--- a/web_app/templates/menu.html
+++ b/web_app/templates/menu.html
@@ -26,9 +26,9 @@
           <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
   
             <div class="col-lg-6 menu-item filter-starters">
-              <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+              <img src="/web_app/templates/assets/img/macchiato.jpeg" class="menu-img" alt="">
               <div class="menu-content">
-                <a href="#">Lobster Bisque</a><span>$5.95</span>
+                <a href="#">macchiato</a><span>$5.95</span>
               </div>
               <div class="menu-ingredients">
                 Lorem, deren, trataro, filede, nerada
