--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -5,43 +5,47 @@
 
     <!-- ======= About Us Section ======= -->
     <section id="why-us" class="why-us">
-        <div class="container" data-aos="fade-up">
-  
-          <div class="section-title">
-            <h2>About Us</h2>
-            <p>Who Are We?</p>
+      <div class="container" data-aos="fade-up">
+
+    <div class="section-title">
+      <h2>About Us</h2>
+      <p>Who Are We?</p>
+  </div>
+
+  <div class="row">
+
+      <div class="col-lg-4">
+          <div class="box" data-aos="zoom-in" data-aos-delay="100">
+              <span>01</span>
+              <h4>Local</h4>
+              <p>Uncommon Grounds (UG) has been a part of the Georgetown community since 1995, located right across from the University bookstore in the Leavey Center. We're proud to be a local coffee shop, providing a cozy and intimate atmosphere for students and faculty alike.</p>
           </div>
-  
-          <div class="row">
-  
-            <div class="col-lg-4">
-              <div class="box" data-aos="zoom-in" data-aos-delay="100">
-                <span>01</span>
-                <h4>Local</h4>
-                <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 mt-4 mt-lg-0">
-              <div class="box" data-aos="zoom-in" data-aos-delay="200">
-                <span>02</span>
-                <h4>Student Run</h4>
-                <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 mt-4 mt-lg-0">
-              <div class="box" data-aos="zoom-in" data-aos-delay="300">
-                <span>03</span>
-                <h4> Quality Ingredients</h4>
-                <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
-              </div>
-            </div>
-  
+      </div>
+
+      <div class="col-lg-4 mt-4 mt-lg-0">
+          <div class="box" data-aos="zoom-in" data-aos-delay="200">
+              <span>02</span>
+              <h4>Student Run</h4>
+              <p>UG is not only a place for students to enjoy their coffee but also an opportunity for them to showcase their talents. We host live performances, poetry readings, open-mic nights, and display student artwork, making UG a vibrant hub of creativity on campus.</p>
           </div>
-  
-        </div>
-      </section><!-- End About Us Section -->
+      </div>
+
+      <div class="col-lg-4 mt-4 mt-lg-0">
+          <div class="box" data-aos="zoom-in" data-aos-delay="300">
+              <span>03</span>
+              <h4>Quality Ingredients</h4>
+              <p>Our commitment to quality extends from our selection of coffees and teas to our assortment of bagels, muffins, croissants, and other pastries. We ensure that our ingredients meet high standards, providing you with the perfect pick-me-up for early mornings and late nights.</p>
+          </div>
+      </div>
+
+  </div>
+
+</section><!-- End About Us Section -->
+
+
+
+
+
 
 {% endblock %}
 
