home page video update

--- a/web_app/templates/contact.html
+++ b/web_app/templates/contact.html
@@ -26,16 +26,18 @@
             <div class="address">
               <i class="bi bi-geo-alt"></i>
               <h4>Location:</h4>
-              <p>1560 Tondorf Rd, Washington, DC 20007</p>
+              <p>1560 Tondorf Rd, Washington, DC 20007<br>
+                Upstairs in the Leavey Center
+              </p>
             </div>
 
             <div class="open-hours">
               <i class="bi bi-clock"></i>
               <h4>Open Hours:</h4>
               <p>
-                Monday-Friday:<br>
-                8:30 AM - 5:00 PM
-                Saturday - Sunday:
+                Monday - Friday:<br>
+                8:30 AM - 5:00 PM <br>
+                Saturday - Sunday: <br>
                 10:00 AM - 4:30 PM
               </p>
             </div>
