--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-lg-8">
             <h1>Welcome to <span>Uncommon Grounds</span></h1>
-            <h2>Delivering great food for more than 18 years!</h2>
+            <h2>Making the best Georgetown coffee for over 25 years!</h2>
 
             <div class="btns">
                 <a href="/menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
@@ -16,7 +16,7 @@
             </div>
             </div>
             <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
-            <a href="https://www.youtube.com/watch?v=u6BOC7CDUTQ" class="glightbox play-btn"></a>
+            <a href="https://www.youtube.com/watch?v=31pS1hpbno0" class="glightbox play-btn"></a>
             </div>
 
         </div>
