--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -33,7 +33,7 @@
       <div class="col-lg-4 mt-4 mt-lg-0">
           <div class="box" data-aos="zoom-in" data-aos-delay="300">
               <span>03</span>
-              <h4>Quality Ingredients</h4>
+              <h4>Use Quality Ingredients</h4>
               <p>Our commitment to quality extends from our selection of coffees and teas to our assortment of bagels, muffins, croissants, and other pastries. We ensure that our ingredients meet high standards, providing you with the perfect pick-me-up for early mornings and late nights.</p>
           </div>
       </div>
