updated about, put headshot and socials in team

--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <!-- ======= About Us Section ======= -->
+  
     <section id="why-us" class="why-us">
       <div class="container" data-aos="fade-up">
 
@@ -14,7 +14,7 @@
 
   <div class="row">
 
-      <div class="col-lg-4">
+      <div class="col-lg-3">
           <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>01</span>
               <h4>Local</h4>
@@ -22,15 +22,15 @@
           </div>
       </div>
 
-      <div class="col-lg-4 mt-4 mt-lg-0">
+      <div class="col-lg-3 mt-4 mt-lg-0">
           <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
               <h4>Student Run</h4>
-              <p>UG is not only a place for students to enjoy their coffee but also an opportunity for them to showcase their talents. We host live performances, poetry readings, open-mic nights, and display student artwork, making UG a vibrant hub of creativity on campus.</p>
+              <p>We are Students Serving Students. As part of "The Corp", a nonprofit charitable organization, we are part of eight on-campus employers employing over 350 undergraduate students and funding tens of thousands in philanthropic work</p>
           </div>
       </div>
 
-      <div class="col-lg-4 mt-4 mt-lg-0">
+      <div class="col-lg-3 mt-4 mt-lg-0">
           <div class="box" data-aos="zoom-in" data-aos-delay="300">
               <span>03</span>
               <h4>Quality Ingredients</h4>
@@ -38,9 +38,16 @@
           </div>
       </div>
 
+      <div class="col-lg-3 mt-4 mt-lg-0">
+        <div class="box" data-aos="zoom-in" data-aos-delay="400">
+            <span>04</span>
+            <h4>Creative Hub</h4>
+            <p>UG is not only a place for students to enjoy their coffee but also an opportunity for them to showcase their talents. We host live performances, poetry readings, open-mic nights, and display student artwork, making UG a vibrant hub of creativity on campus.</p>
+        </div>
+    </div>
   </div>
 
-</section><!-- End About Us Section -->
+</section>
 
 
 
