--- a/web_app/templates/team.html
+++ b/web_app/templates/team.html
@@ -32,19 +32,20 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="member" data-aos="zoom-in" data-aos-delay="200">
-            <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/chefs/dima.jpg" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>Sarah Jhonson</h4>
-                <span>Patissier</span>
+                <h4>Damian Delong</h4>
+                <span>Cool Guy</span>
               </div>
               <div class="social">
                 <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/damiandelong/"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
         </div>
+        
 
         <div class="col-lg-4 col-md-6">
           <div class="member" data-aos="zoom-in" data-aos-delay="300">
