updated paragraphs in about

--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -18,7 +18,7 @@
           <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>01</span>
               <h4>Local</h4>
-              <p>Uncommon Grounds (UG) has been a part of the Georgetown community since 1995, located right across from the University bookstore in the Leavey Center. We're proud to be a local coffee shop, providing a cozy and intimate atmosphere for students and faculty alike.</p>
+              <p>Uncommon Grounds has been a part of the Georgetown community since 1995. Located right across from the University bookstore in the Leavey Center, we're proud to be a local coffee shop, providing a cozy and intimate atmosphere for students and faculty alike.</p>
           </div>
       </div>
 
@@ -26,7 +26,7 @@
           <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
               <h4>Student Run</h4>
-              <p>We are Students Serving Students. As part of "The Corp", a nonprofit charitable organization, we are part of eight on-campus employers employing over 350 undergraduate students and funding tens of thousands in philanthropic work</p>
+              <p>We are Students Serving Students. As part of "The Corp", an on-campus nonprofit organization, we are part of eight on-campus employers employing over 350 undergraduate students and funding tens of thousands in philanthropic work</p>
           </div>
       </div>
 
@@ -42,7 +42,7 @@
         <div class="box" data-aos="zoom-in" data-aos-delay="400">
             <span>04</span>
             <h4>Creative Hub</h4>
-            <p>UG is not only a place for students to enjoy their coffee but also an opportunity for them to showcase their talents. We host live performances, poetry readings, open-mic nights, and display student artwork, making UG a vibrant hub of creativity on campus.</p>
+            <p>Uncommon Grounds is not only a place for students to enjoy their coffee but also an opportunity for them to showcase their talents. We host live performances, poetry readings, open-mic nights, and display student artwork, making UG a vibrant hub of creativity on campus.</p>
         </div>
     </div>
   </div>
@@ -55,10 +55,3 @@
 
 
 {% endblock %}
-
-
-<!--<h1>About</h1>
-
-<p class="lead">This is the about page</p>
-
-<p>Here is some more info!</p>-->
