--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -646,7 +646,7 @@
               <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Walter White</h4>
+                  <h4>Andrew Rehr</h4>
                   <span>Master Chef</span>
                 </div>
                 <div class="social">
