--- a/web_app/templates/contact.html
+++ b/web_app/templates/contact.html
@@ -14,7 +14,7 @@
     </div>
 
     <div data-aos="fade-up">
-      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12418.587607211377!2d-77.06473785!3d38.90918919999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b649d094d649%3A0x4298822336a2e4f4!2sGeorgetown%2C%20Washington%2C%20DC!5e0!3m2!1sen!2sus!4v1683043176656!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3104.6162243041895!2d-77.0749039!3d38.909890600000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b640bce8c741%3A0x3af115427f674ec2!2s1560%20Tondorf%20Rd%2C%20Washington%2C%20DC%2020007!5e0!3m2!1sen!2sus!4v1683477503409!5m2!1sen!2sus" width="1300" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
     <div class="container" data-aos="fade-up">
@@ -51,7 +51,7 @@
             <div class="phone">
               <i class="bi bi-phone"></i>
               <h4>Call:</h4>
-              <p>(202) 687 8355</p>
+              <p>(202) 687-8355</p>
             </div>
 
           </div>
@@ -60,7 +60,7 @@
 
         <div class="col-lg-8 mt-5 mt-lg-0">
 
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <form action="https://formspree.io/f/xjvdlzyo" method="POST" role="form" class="php-email-form">
             <div class="row">
               <div class="col-md-6 form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
