--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -26,14 +26,14 @@
           <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
               <h4>Student Run</h4>
-              <p>We are Students Serving Students. As part of "The Corp", an on-campus nonprofit organization, we are part of eight on-campus employers employing over 350 undergraduate students and funding tens of thousands in philanthropic work</p>
+              <p>We are students serving students. As part of "The Corp", an on-campus nonprofit organization, we are part of eight on-campus employers employing over 350 undergraduate students and funding tens of thousands in philanthropic work.</p>
           </div>
       </div>
 
       <div class="col-lg-3 mt-4 mt-lg-0">
           <div class="box" data-aos="zoom-in" data-aos-delay="300">
               <span>03</span>
-              <h4>Use Quality Ingredients</h4>
+              <h4>Quality Ingredients</h4>
               <p>Our commitment to quality extends from our selection of coffees and teas to our assortment of bagels, muffins, croissants, and other pastries. We ensure that our ingredients meet high standards, providing you with the perfect pick-me-up for early mornings and late nights.</p>
           </div>
       </div>
@@ -42,7 +42,7 @@
         <div class="box" data-aos="zoom-in" data-aos-delay="400">
             <span>04</span>
             <h4>Creative Hub</h4>
-            <p>Uncommon Grounds is not only a place for students to enjoy their coffee but also an opportunity for them to showcase their talents. We host live performances, poetry readings, open-mic nights, and display student artwork, making UG a vibrant hub of creativity on campus.</p>
+            <p>Uncommon Grounds is not only a place for students to enjoy their coffee, but also an opportunity for them to showcase their talents. We host live performances, poetry readings, open-mic nights, and display student artwork, making UG a vibrant hub of creativity on campus.</p>
         </div>
     </div>
   </div>
