--- a/web_app/templates/team.html
+++ b/web_app/templates/team.html
@@ -3,85 +3,100 @@
 
 {% block content %}
 
-<!-- ======= Chefs Section ======= -->
-<section id="chefs" class="chefs">
-    <div class="container" data-aos="fade-up">
+<!DOCTYPE html>
+<html lang="en">
 
-      <div class="section-title">
-        <h2>Team Members</h2>
-        <p>Our Team</p>
-      </div>
+<head>
+    <title>Team Members</title>
+    <style>
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
 
-      <div class="row">
+        .member {
+            position: relative;
+            width: 300px;
+            margin: 20px;
+            overflow: hidden;
+        }
 
-        <div class="col-lg-4 col-md-6">
-          <div class="member" data-aos="zoom-in" data-aos-delay="100">
-            <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt="">
+        .member img {
+            width: 100%;
+            transition: transform 0.3s;
+        }
+
+        .member:hover img {
+            transform: scale(1.1);
+        }
+
+        .member-info {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 20px;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        .member:hover .member-info {
+            opacity: 1;
+        }
+
+        .social a {
+            color: white;
+            margin-right: 10px;
+            text-decoration: none;
+        }
+    </style>
+</head>
+
+<body>
+    <h2>Team Members</h2>
+    <div class="container">
+        <div class="member">
+          <img src="static/assets/img/dima.jpg" alt="Damian Delong">
             <div class="member-info">
-              <div class="member-info-content">
-                <h4>Walter White</h4>
-                <span>Master Chef</span>
-              </div>
-              <div class="social">
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6">
-          <div class="member" data-aos="zoom-in" data-aos-delay="200">
-            <img src="assets/img/chefs/dima.jpg" class="img-fluid" alt="">
-            <div class="member-info">
-              <div class="member-info-content">
                 <h4>Damian Delong</h4>
-                <span>Cool Guy</span>
-              </div>
-              <div class="social">
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/damiandelong/"><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-
-        <div class="col-lg-4 col-md-6">
-          <div class="member" data-aos="zoom-in" data-aos-delay="300">
-            <img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt="">
-            <div class="member-info">
-              <div class="member-info-content">
-                <h4>William Anderson</h4>
-                <span>Cook</span>
-              </div>
-              <div class="social">
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-            <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>William Anderson</h4>
-                  <span>Cook</span>
-                </div>
                 <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.instagram.com/dimadelong"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/damiandelong"><i class="bi bi-linkedin"></i></a>
                 </div>
-              </div>
+            </div>
+        </div>
+        <div class="member">
+            <img src="static/assets/img/andrew.jpg" alt="Andrew Rehr">
+            <div class="member-info">
+                <h4>Andrew Rehr</h4>
+                <div class="social">
+                    <a href="https://www.instagram.com/andrew_rehr"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/andrew_rehr"><i class="bi bi-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="member">
+            <img src="static/assets/img/ryan.jpg" alt="Ryan Silva">
+            <div class="member-info">
+                <h4>Ryan Silva</h4>
+                <div class="social">
+                    <a href="https://www.instagram.com/ryan_silva"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/ryan_silva"><i class="bi bi-linkedin"></i></a>
+                </div>
             </div>
         </div>
 
-
-      </div>
-
-    </div>
-  </section><!-- End Chefs Section -->
-
+              <div class="member">
+                <img src="static/assets/img/kanoon.jpg" alt="Kanoon Giri">
+                <div class="member-info">
+                    <h4>Kanoon Giri</h4>
+                    <div class="social">
+                        <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
 {% endblock %}
