--- a/web_app/templates/team.html
+++ b/web_app/templates/team.html
@@ -9,16 +9,9 @@
 <head>
     <title>Team Members</title>
     <style>
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
         .member {
             position: relative;
-            width: 300px;
-            margin: 20px;
+            width: 100%;
             overflow: hidden;
         }
 
@@ -58,51 +51,64 @@
 <body>
     <h2>Team Members</h2>
     <div class="container">
-       
-      <div class="member">
-          <img src="static/assets/img/dima.jpg" alt="Damian Delong">
-            <div class="member-info">
-              <div class="member-info-content">
-                <h4>Andrew Rehr</h4>
-                <span>Master Chef</span>
-              </div>
-              <div class="social">
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="row">
+            
 
-        <div class="member">
-            <img src="static/assets/img/andrew.jpg" alt="Andrew Rehr">
-            <div class="member-info">
-                <h4>Andrew Rehr</h4>
-                <div class="social">
-                    <a href="https://www.instagram.com/andrew_rehr"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/andrew_rehr"><i class="bi bi-linkedin"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="member">
-            <img src="static/assets/img/ryan.jpg" alt="Ryan Silva">
-            <div class="member-info">
-                <h4>Ryan Silva</h4>
-                <div class="social">
-                    <a href="https://www.instagram.com/ryan_silva"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/ryan_silva"><i class="bi bi-linkedin"></i></a>
-                </div>
-            </div>
-        </div>
-
-              <div class="member">
-                <img src="static/assets/img/kanoon.jpg" alt="Kanoon Giri">
-                <div class="member-info">
-                    <h4>Kanoon Giri</h4>
-                    <div class="social">
-                        <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/"><i class="bi bi-linkedin"></i></a>
+            <div class="col-lg-3 col-md-6">
+                <div class="member">
+                    <img src="static/assets/img/andrew.jpg" alt="Andrew Rehr">
+                    <div class="member-info">
+                        <h4>Andrew Rehr</h4>
+                        <div class="social">
+                            <a href="https://www.instagram.com/andrew_rehr"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/andrew_rehr"><i class="bi bi-linkedin"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
-{% endblock %}
+
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                  <img src="static/assets/img/dima.jpg" alt="Damian Delong">
+                  <div class="member-info">
+                      <h4>Damian Delong</h4>
+                      <div class="social">
+                          <a href="https://www.instagram.com/damian_delong"><i class="bi bi-instagram"></i></a>
+                          <a href="https://www.linkedin.com/in/damian_delong"><i class="bi bi-linkedin"></i></a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          
+            <div class="col-lg-3 col-md-6">
+                <div class="member">
+                    <img src="static/assets/img/ryan.jpg" alt="Ryan Silva">
+                    <div class="member-info">
+                        <h4>Ryan Silva</h4>
+                        <div class="social">
+                            <a href="https://www.instagram.com/ryan_silva"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/ryan_silva"><i class="bi bi-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                <div class="col-lg-3 col-md-6">
+                  <div class="member">
+                      <img src="static/assets/img/kanoon.jpg" alt="Kanoon Giri">
+                      <div class="member-info">
+                          <h4>Kanoon Giri</h4>
+                          <div class="social">
+                              <a href="https://www.instagram.com/kanoon_giri"><i class="bi bi-instagram"></i></a>
+                              <a href="https://www.linkedin.com/in/kanoon_giri"><i class="bi bi-linkedin"></i></a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </body>
+  
+  </html>
+  {% endblock %}
+  
