--- a/web_app/templates/menu.html
+++ b/web_app/templates/menu.html
@@ -9,7 +9,7 @@
   
           <div class="section-title">
             <h2>Menu</h2>
-            <p>Check Our Tasty Menu</p>
+            <p>Check Our Menu</p>
           </div>
   
           <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -28,7 +28,7 @@
             <div class="col-lg-6 menu-item filter-starters">
               <img src="/static/assets/img/macchiato.jpeg" class="menu-img" alt="">
               <div class="menu-content">
-                <a href="#">macchiato</a><span>$5.95</span>
+                <a href="#">Coffee</a><span>$5.95</span>
               </div>
               <div class="menu-ingredients">
                 Lorem, deren, trataro, filede, nerada
@@ -38,7 +38,7 @@
             <div class="col-lg-6 menu-item filter-specialty">
               <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
               <div class="menu-content">
-                <a href="#">Bread Barrel</a><span>$6.95</span>
+                <a href="#">Bread</a><span>$6.95</span>
               </div>
               <div class="menu-ingredients">
                 Lorem, deren, trataro, filede, nerada
